resource/nginx-app/nginx-nlb-access-log.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-nlb-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: "nginx-nlb-access-log"
  annotations:
        service.beta.kubernetes.io/aws-load-balancer-type: nlb
        # The annotation to enable access log.
        service.beta.kubernetes.io/aws-load-balancer-access-log-enabled: "true"
        service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-name: "ray-nlb-accesslogs-zhy"
        service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-prefix: "gcr-zhy-eksworkshop"
        
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
