resource/nginx-app/ningx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-clb-deployment
  labels:
    app: nginx-clb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-clb
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: "service-nginx-clb"
  annotations:
        service.beta.kubernetes.io/aws-load-balancer-type: clb
spec:
  selector:
    app: nginx-clb
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
